Adopt VS files to new project config

--- a/GfG/Rotate Array/cpp/Windows/Rotate Array/Rotate Array.vcxproj.filters
+++ b/GfG/Rotate Array/cpp/Windows/Rotate Array/Rotate Array.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Rotate Array.cpp">
+    <ClCompile Include="src\Rotate Array.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
